--- a/scss/_quill.scss
+++ b/scss/_quill.scss
@@ -16,13 +16,24 @@
     }
 }
 
-hr {
+.ql-editor > div {
     border: none;
     background: var(--color-secondary);
     color: var(--color-text-primary);
     letter-spacing: 1em;
     text-align: center;
     height: 1rem;
+    caret-color: transparent;
+}
+
+p.pagebreak, hr {
+    border: none;
+    background: var(--color-secondary);
+    color: var(--color-text-primary);
+    letter-spacing: 1em;
+    text-align: center;
+    height: 1rem;
+    caret-color: transparent;
 }
 
 hr:before {
